# Agent_design

./: .env.example  .gitignore  Agent架构设计题解析.docx  README.md  agent_desige_docx.docx  pyproject.toml  视频链接(上传到抖音平台).txt
app/: __init__.py  config.py  context.py  database.py  factory.py  main.py  models.py  runtime.py
app/llm/: __init__.py  base.py  mock.py  openai_compatible.py
app/static/: index.html
app/tools/: __init__.py  base.py  builtin.py  registry.py
tests/: helpers.py  test_context.py  test_runtime.py  test_tools.py
